# lab-2-ASD

./: CMakeLists.txt  d_generator.cpp  d_generator.h  generator.cpp  generator.h  main.cpp  test.cpp
